add security for get square random users api spec
