# docs/swagger.yaml
@@ -618,6 +618,11 @@ paths:
       description: 可通过用户ID获取用户详情
       operationId: get_random_users_details
       parameters:
+      - description: Authorization
+        in: header
+        name: x-token
+        required: true
+        type: string
       - description: 用户ID
         in: query
         name: uid
@@ -630,6 +635,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/controllers.UserDetails'
+      security:
+      - x-token: []
       summary: 获取广场用户详情
       tags:
       - User
